# minesweeper

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw.cmake
src/: main.cpp
